# QuickBase-Structure-Client

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
.github/workflows/: build_and_publish.yml  ci.yml
docs/: __index__.md  api-reference.md  automatic-backups.md  development.md  examples.md  getting-started.md  index.md  request-configuration.md  schema-exports-and-solutions.md
examples/: __init__.py  export_schema.py  pto_tracking_demo.py
src/quickbase_structure_client/: __init__.py  app.py  config.py  exceptions.py  field.py  quickbase_api.py  relationship.py  schema_exporter.py  solutions.py  table.py  trustees.py
src/quickbase_structure_client/tools/: __init__.py  backup_manager.py
tests/: __init__.py  conftest.py  test_backup_manager.py  test_export_schema_example.py  test_pto_demo.py  test_request_layer.py  test_solutions_and_exporter.py  test_structure_operations.py
